--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 This file lists all individuals having contributed content to the repository.
 
 Joseph Wainaina <ynainajoseph@gmail.com>
+Dan Murimi <danmurimi369@gmail.com>
